# Raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SerializedData.json  SerializedData.txt  anotherTest.txt  test2.txt
Raytracing/: CMakeLists.txt  main.cpp
Raytracing/headers/: Constants.h
Raytracing/headers/engine/: Camera.h  Entity.h  Light.h  Object.h  Ray.h  Renderer.h  Scene.h  Serializer.h  Skybox.h
Raytracing/headers/helpers/: IdGenerator.h  Singleton.h  Utility.h
Raytracing/headers/image/: Image.h
Raytracing/headers/lights/: AmbientLight.h  DirectionalLight.h  PointLight.h
Raytracing/headers/math/: Constants.h  Matrix.h  Point.h  Vector.h
Raytracing/headers/primitives/: Cone.h  Cube.h  Cylinder.h  Plane.h  Sphere.h  Square.h  Triangle.h
Raytracing/headers/texture/: Color.h  Material.h  Texture.h
Raytracing/headers/ui/: IRenderContext.h  ImGUI_context.h  OpenGL_context.h  window.h
Raytracing/src/: unit.cpp
Raytracing/src/engine/: Camera.cpp  Entity.cpp  Light.cpp  Object.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Serializer.cpp  Skybox.cpp
Raytracing/src/helpers/: IdGenerator.cpp  Singleton.cpp  Utility.cpp
Raytracing/src/image/: Image.cpp
Raytracing/src/lights/: AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp
Raytracing/src/math/: Matrix.cpp  Point.cpp  Vector.cpp
Raytracing/src/primitives/: Cone.cpp  Cube.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp  Square.cpp  Triangle.cpp
Raytracing/src/texture/: Color.cpp  Material.cpp  Texture.cpp
Raytracing/src/ui/: ImGUI_context.cpp  OpenGL_context.cpp  window.cpp
resources/: SerializedData.json
resources/ExampleScenes/: LightInterpolation.json  PrimitiveDisplay.json  primitiveDisplay.json
